--- a/page/src/components/cardSection/cardSection.css
+++ b/page/src/components/cardSection/cardSection.css
@@ -97,3 +97,15 @@
     font-size: 1rem;
   }
 }
+
+@media (max-width: 480px) {
+  .card-page {
+    padding: 0;
+  }
+
+  .card-page__header {
+    font-size: 1rem;
+    padding: 24px 16px;
+  }
+
+}
